# vanilla

./: .clang-format  .gitignore  vanilla.code-workspace
frontend/dev-server/: deno.jsonc  main.ts
frontend/public/: imp.js  index.html  main.js
game_engine_3d/: README.md  run.sh
game_engine_3d/glad/: glad.c  glad.h
game_engine_3d/lib/: get_shader_program.h  util.h
game_engine_3d/src/: camera.c  color_shader.vs  shader.fs  shader.vs  texture_shader.fs  texture_shader.vs
ide/: .gitignore  README.md  draw.h  out.asm  prepare-wayland.sh  run.sh  wayland-client.c
ide/proto/: index.html
ide/proto/client/: package.json
ide/proto/client/data/: binview.c  casm  compiler.c  exit-asm  exit.s  hello.asm  run-asm.sh  run-casm.sh  run-compiler.sh
ide/proto/client/scripts/: htmlparser.js  printop.ts  syscall_64_clean.tbl  x86-one-byte-op.json
ide/proto/client/src/: App.css  Assembler.tsx  BytesViewTable.tsx  elfReader.ts  helper.ts  index.css
ide/proto/data/: binview  binview.c  casm.c  compiled  compiler  compiler.c  compiler.js  compiler.ts  exit-c  exit-clang  exit.asm  hello  printx  printx.asm  run-asm.sh
ide/proto/data/codestrings/: ide.js
ide/proto/scripts/: parsex86.ts  syscall-parser.js  x86-two-byte-op.json
ide/proto/server/: run.sh  server.ts
ide/proto/src/: App.css  App.tsx  BytesView.tsx  BytesViewTable.tsx  ElfReader.tsx  ProgramEditor.tsx  Proto.tsx  bin.ts  elfReader.ts
ide/proto/src/ProgramEditor/: ProgramCustom.tsx  ProgramEditor.tsx
ide/protoserver/: compiler.ts
ide/scripts/: timer.c
ide/src/: compiler.c  compiler.h  draw.c  draw.h  helpers.h  helpers.zig  ide.c  ide.h  types.h  wayland-client.c  window.c  window.h
libc/: libc.h  main.c  run.sh  start.s
libc/scripts/: libparser.js  posix.tbl  std.tbl
public/: index.html
server/: generate-certs.sh  main.go
server/c/: http.c
server/c/http/: Makefile
server/deno/: main.ts
server/deno/std/: main.ts
server/deno/tls/: main.ts
server/deno/vanilla/: main.ts
server/go/: go.mod  http.go
server/go/my-http/: main.go
server/go/my-https/: main.go
server/go/std-http/: go.mod  main.go
server/public/: foo.js
server/rust/: .gitignore  Makefile
server/rust/https/: Cargo.toml
vulkan/: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  ng_io.h  ng_render.h  run.sh  types.h  util.h
vulkan/assets/: shader.slang
vulkan/engine/: init.h  init_buffer.h  init_models.h  init_pipeline.h  init_swapchain.h  init_uniform_buffers.h  io.h  main.c  ng_init.h  ng_render.h  render.h  types.h
vulkan/engine/shaders/: dynamic.slang
vulkan/odin/triangle/: .gitignore  run.sh  triangle.odin  triangle_minimal.slang
vulkan/odin/window/: window.odin
vulkan/shaders/: frag.frag  uniform.slang
vulkan/window/: main.c  run.sh
vulkan_cmake/: CMakeLists.txt  main.cpp  run.sh
wayland/: client.c  client.zig  run.sh
web/browser/: Makefile  main.c
web/frontend/dev-server/: deno.jsonc  main.ts
web/server/c/http/: http.c
web/server/c/https/: Makefile  https.c
web/server/deno/vanilla/: deno.json  main.ts
(+8 files in other folders)
